--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -17,5 +17,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: 21
 
 # What steps within each job
